--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/proyecto
+spring.datasource.url=jdbc:postgresql://localhost:5432/proyect
 spring.datasource.username=postgres
-spring.datasource.password=123456789
+spring.datasource.password=12345
+server.port=8082
