--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ dependencies {
 	implementation 'net.sf.jasperreports:jasperreports:6.20.0'
 	implementation 'com.lowagie:itext:2.1.7.js4'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	// https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports
+    implementation 'net.sf.jasperreports:jasperreports:6.20.0'
+    // https://mvnrepository.com/artifact/com.lowagie/itext
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
