--- a/build.gradle
+++ b/build.gradle
@@ -18,19 +18,19 @@ repositories {
 	mavenCentral()
 	maven { url 'https://repo.spring.io/milestone' }
 	maven { url 'https://repo.spring.io/snapshot' }
-	maven { url "https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/" }
+  maven { url "https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/" }
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	// https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports
-	implementation 'net.sf.jasperreports:jasperreports:6.20.0'
 	implementation 'com.lowagie:itext:2.1.7.js4'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	// https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports
-    implementation 'net.sf.jasperreports:jasperreports:6.20.0'
-    // https://mvnrepository.com/artifact/com.lowagie/itext
+  // implementation 'net.sf.jasperreports:jasperreports:6.20.0'
+  // https://mvnrepository.com/artifact/com.lowagie/itext
+  implementation 'net.sf.jasperreports:jasperreports:6.8.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
